codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_export_filename_prompt.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 2095
expression: popup
---
 Elpis · model gpt-5.6-sol default · location /tmp/project

  Save conversation

› codex-session-00000000-0000-0000-0000-000000000123.md

  enter submit · esc back
