codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_pets_picker.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 2898
expression: popup
---
 Elpis · model gpt-5.6-sol · location /tmp/project

  Select Pet
  Choose a pet to wake in the terminal.

  Type to filter pets...

  Disable terminal pets
  BSOD                                                Loading preview...
› Codex
  Dewey
  Fireball
  Null Signal
  Rocky
  Seedy
↓
  enter select · esc back
