codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_rename_prefilled_prompt.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 1244
expression: popup
---
 Elpis · model gpt-5.6-sol · location /tmp/project · Current project title

  Rename thread

› Current project title

  enter submit · esc back
