codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_rename_suggestion_loading.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 1264
expression: popup
---
 Elpis · model gpt-5.6-sol · location /tmp/project · Current project title

  Rename thread
  Generating a title suggestion…

› Current project title

  enter submit · esc back
