codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_rename_suggestion_prefilled.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 1181
expression: popup
---
 Elpis · model gpt-5.6-sol default · location /tmp/project · Current project tit

  Rename thread
  Suggested from this conversation

› Fix login timeout

  enter submit · esc back
