codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_side_requests_forked_side_question_while_task_running.snap
---
source: tui/src/chatwidget/tests/side.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
" Elpis · model gpt-5.6-sol default · location /tmp/project                      "
"Elpising… (0s • esc to interrupt)               │CONTEXT LEDGER  context not    "
"                                                │measured · ≈0 source estimates "
"┌──────────────────────────────────────────────┐│Tab controls · Alt+C hide ·    "
"› Ask Elpis to do anything                     ││Ctrl+click open file           "
"└──────────────────────────────────────────────┘│                               "
"  ? for shortcuts             Side starting...  │SMART PRUNE          [···] SYNC"
"                                                │Reading current thread state   "
"                                                │Syncing… · /smart-prune on|off "
"                                                │sets an explicit state         "
"                                                │                               "
"                                                │SUBAGENTS             [━━━●] ON"
"                                                │May delegate to other agents   "
"                                                │                               "
"                                                │CONTEXT WINDOW  usage          "
"                                                │unavailable                    "
"                                                │Context measurement unavailable"
"                                                │until the first request        "
"                                                │snapshot                       "
"                                                │                               "
"                                                │No portable context is         "
"                                                │available.                     "
